# python-rust-project-template

./: Cargo.toml  README.md  pyproject.toml
py-package/: invoice.py
rs-package/: lib.rs
tests/: test_invoice.py
