[package]
name = "rust-python-project-template"
version = "0.1.0"
edition = "2021"
authors = ["Kasper Jønsson"]
repository = "https://github.com/kanerix/rust-python-project-template"

[lib]
name = "rs_package"
path = "rs-package/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
